<resources>
    <string name="app_name">Claims and Reviews</string>
    <string name="title_activity_maps">Map</string>

    <string name="default_loading_text">Cargando...</string>

    //LOGIN VARIABLES
    <string name="login_title">RECLAMOS DIGITAL</string>
    <string name="login_email">Email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_btn">INICIAR SESIÓN</string>
    <string name="login_register">REGISTRO</string>
    <string name="title_activity_maps2">Map</string>
    <string name="welcome">Bienvenido de nuevo,</string>
    <string name="login_order">Inicia sesión para continuar</string>
    <string name="new_user">Nuevo usuario?</string>
    <string name="register"> Regístrate</string>

    //VALIDATION LOGIN
    <string name="email_required">Correo requerido</string>
    <string name="password_invalid">Contraseña incorrecta</string>
    <string name="cant_pass">No puede ingresar</string>
    <string name="success">Acceso correcto</string>
    <string name="error_connect">No se puede conectar</string>
    <string name="email_password_ws_error">Usuario y/o Contraseña incorrecto</string>
    <string name="user_deleted">Usuario eliminado, comuniquese con soporte</string>
    <string name="user_not_verified">El usuario no ha sido verificado</string>

    //REGISTER STRINGS
    <string name="register_dni">DNI</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="error_name">Nombre requerido</string>
    <string name="error_last_name">Apellidos requerido</string>
    <string name="required">Requerido</string>
    <string name="password_different">Contraseñas no coinciden</string>
    <string name="validate_form">Tiene campos sin completar</string>
    <string name="label_sex">Sexo</string>
    <string name="created_error">Ha ocurrido un error</string>

    //SEARCH ITEMS
    <string name="search">Buscar</string>


    //NAVIGATION ITEMS
    <string name="navigation_map">Mapa</string>
    <string name="navigation_perfil">Mi Perfil</string>
    <string name="navigation_logout">Cerrar Sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //ENTERPRISE
    <string name="enterprise_name">EMPRESA NOMBRE</string>
    <string name="enterprise_branch">SUCURSAL</string>
    <string name="enterprise_address">DIRECCION</string>
    <string name="enterprise_service">SERVICIO</string>
    <string name="enterprise_district">DISTRITO</string>
    <string name="enterprise_rating">RATING</string>
    <string name="enterprise_message">MENSAJE</string>
    <string name="enterprise_opinion_title">OPINIONES</string>
    <string name="enterprise_comment">Escribir comentario</string>
    <string name="card_date">00/00/00</string>
    <string name="enterprise_send_message_error">No ha escrito ningún mensaje</string>
    <string name="enterprise_card_personal_title">Mi valoración:</string>
    <string name="enterprise_other_opinion_title">Otras valoraciones: </string>
    <string name="enterprise_valoration_duplicate">Usted ya tiene registrado un comentario.</string>
    <string name="enterprise_comment_delete">Su comentario ha sido eliminado.</string>
    <string name="enterprise_error_comment">Hubo un problema al registrar el comentario.</string>
    <string name="enterprise_comment_success">Su comentario se registró satisfactoriamente.</string>

    //PROFILE
    <string name="profile_name">Nombre</string>
    <string name="profile_ocupation">Ocupación</string>
    <string name="profile_email">Correo</string>
    <string name="profile_district">Distrito</string>
    <string name="profile_dni">Documento de identidad</string>
    <string name="profile_scholar_grade">Grado Académico</string>
    <string name="profile_sex">Sexo</string>

    //CLAIMS
    <string name="pick_photo">ESCOGER FOTO</string>
    <string name="send_claim">ENVIAR RECLAMO</string>
    <string name="claim_message">Mensaje</string>
    <string name="claim_cellphone">Teléfono o celular</string>
    <string name="claim_title">Por favor insertar imagen de su DNI</string>
</resources>
