<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.register.view_three.RegisterActivity3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:gravity="center"
        android:paddingRight="20dp">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="Crea su cuenta"
            android:textAlignment="center"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/label_register_dni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_dni"
                style="@style/ThemeOverlay.MaterialComponents.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/register_dni"
                android:inputType="number"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/label_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginBottom="20dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/toogle_pass"
            app:passwordToggleTint="@color/secondaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password"
                style="@style/ThemeOverlay.MaterialComponents.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:paddingBottom="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/label_register_confirmation_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:errorEnabled="true"
            app:passwordToggleDrawable="@drawable/toogle_pass"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/secondaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_confirm_password"
                style="@style/ThemeOverlay.MaterialComponents.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="REGISTRARSE"
            app:cornerRadius="0dp" />

    </LinearLayout>


</LinearLayout>