<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.enterprise.EnterpriseActivity">

    <include
        android:id="@+id/toolbar_general"
        layout="@layout/toolbar" />

    <!-- CONTINUA LA VISTA -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <LinearLayout
                    android:id="@+id/enterprise_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/enterprise_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="@string/enterprise_name"
                        android:textColor="#000"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/enterprise_content_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:src="@drawable/ic_address_on_black_24dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/enterprise_address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/enterprise_address"
                                android:textColor="@color/secondaryTextColor"
                                android:textSize="16dp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/enterprise_address"
                                android:textSize="12dp" />
                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>




            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/profile_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/enterprise_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/enterprise_rating"
                    android:textColor="#000"
                    android:textSize="20sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/enterprise_rating_star"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/ratingBar_general"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="1" />

            </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primaryTextColor"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/enterprise_opinion_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="Opiniones"
                        android:textColor="#000"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="10sp">

                        <TextView
                            android:id="@+id/label_enterprise_personal_opinion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="Tú valoración:"
                            android:textColor="#000"
                            android:textSize="15sp" />


                        <LinearLayout
                            android:id="@+id/enterprise_personal_opinion_star"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#fff"
                            android:gravity=""
                            android:orientation="horizontal"
                            android:paddingLeft="15sp">

                            <RatingBar
                                android:id="@+id/ratingBar_personal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:numStars="5"
                                android:stepSize="1" />

                        </LinearLayout>
                    </LinearLayout>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#fff"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:weightSum="10"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/label_personal_opinion"
                        android:layout_width="wrap_content"
                        android:layout_weight="8"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/enterprise_personal_opinion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enterprise_comment"
                            android:inputType="textMultiLine" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <ImageView
                        android:id="@+id/enterprise_send_opinion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:background="#fff"
                        android:clickable="true"
                        android:src="@drawable/ic_send_black_24dp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/comments_list_rv"
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical" android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </ScrollView>


</LinearLayout>